Refactored the GraphBuilder to use FluentInterfaces and provide more meaning ful abstractions for building the graph.
Also added support for processing records written in a flat file format.